--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "graphql": "^15.3.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-pull-to-refresh": "^1.1.2",
     "react-scripts": "3.4.3"
   },
   "scripts": {
